--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    < class="container">
+      <h1>Tip Calculator</h1>
+      <p>Enter the bill amout and tip percentage to calculate the total.</p>
+      <label for="bill">Bill amount:</label>
+      <input type="number" id="bill">
+      <br>
+      <label for="tip">Tip percentage:</label>
+      <input type="number" id="tip">
+      <br>
+      <button id="calculate">Calculate</button>
+      <br>
+      <label for="total">Total:</label>
+      <span id="total"></span>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
