--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    < class="container">
+    <div class="container">
       <h1>Tip Calculator</h1>
       <p>Enter the bill amout and tip percentage to calculate the total.</p>
       <label for="bill">Bill amount:</label>
